--- a/META.yml
+++ b/META.yml
@@ -3,14 +3,15 @@ abstract: ~
 author:
   - 'Oleg Komarov <komarov@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
   Test::Deep: 0
   Test::Exception: 0
   Test::More: 0.87
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 0.92'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,4 +28,4 @@ requires:
   Plack::Response: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.03
+version: 0.04
